testsuite/tests/properties/invalid_map/arg_type.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[FooNode, NumberNode]
    @export fun prop(): Array[Entity[NumberNode]] =
        self.nb_list.map((x: Int) => x)
}
